# celestica

./: .gitignore  .history  Cargo.toml  LICENSE  README.md
celestica-arrow/: Cargo.toml
celestica-arrow/src/: errors.rs  fs.rs  lib.rs  mem_table.rs  memtable.rs
celestica-arrow/src/catalog/: mod.rs
celestica-arrow/src/datasource/: lance_table_factory.rs  mod.rs
celestica-arrow/src/datasource/file_format/: lance.rs
celestica-cli/: Cargo.toml  README.md
celestica-cli/src/: catalog.rs  command.rs  exec.rs  functions.rs  helper.rs  lib.rs  main.rs  print_format.rs  print_options.rs
celestica-cluster/: Cargo.toml  README.md
celestica-cluster/src/: main.rs
celestica-crdt/: Cargo.toml
celestica-crdt/src/: lib.rs  orswot.rs  timestamp.rs
celestica-eventual-consistency/: Cargo.toml
celestica-eventual-consistency/src/: core.rs  error.rs  lib.rs  storage.rs  test_utils.rs
celestica-eventual-consistency/src/keyspace/: actor.rs  group.rs  messages.rs
celestica-eventual-consistency/src/replication/: distributor.rs  poller.rs
celestica-eventual-consistency/src/rpc/: client.rs
celestica-eventual-consistency/src/rpc/services/: consistency_impl.rs  replication_impl.rs
celestica-node/: Cargo.toml
celestica-node/src/: clock.rs  error.rs  extension.rs  lib.rs  nodes_selector.rs
celestica-node/src/rpc/: chitchat_transport.rs  network.rs
celestica-node/src/rpc/services/: chitchat_impl.rs
celestica-rpc/: Cargo.toml
celestica-rpc/src/: client.rs  handler.rs  lib.rs  server.rs
celestica-rpc/src/net/: server.rs
celestica-rpc/tests/: basic.rs  many_messages.rs  many_services.rs  service_error.rs  stream.rs  unknown_service.rs
celestica-storage/: Cargo.toml
generated-types/: Cargo.toml  build.rs
generated-types/protos/celestica/ingester/v1/: write.proto
generated-types/protos/celestica/namespace/v1/: service.proto
generated-types/protos/celestica/pbdata/v1/: celestica_pb_data_protocol.proto
generated-types/protos/celestica/querier/v1/: flight.proto
generated-types/protos/celestica/table/v1/: service.proto
generated-types/protos/celestica/wal/v1/: wal.proto
generated-types/src/: lib.rs
simulation-tests/: Cargo.toml
