[package]
name = "celestica"
version = "0.1.0"
edition = "2021"
description = "A distributed vector similarity vector database."
license = "MIT"
keywords = ["vector", "databases", "distributed", "tokio", "async"]
categories = ["concurrency", "data-structures", "asynchronous","database"]
repository = "https://github.com/EtaCassiopeia/celestica"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tokio = "1.28.2"

[workspace]
members = [
    "celestica-node",
    "celestica-rpc",
    "celestica-storage",
    "celestica-eventual-consistency",
    "celestica-crdt",

    # Utils
    "test-helper",
    "benchmarks",
    "simulation-tests",
]
