[package]
name = "celestica-arrow"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
object_store = { workspace = true }

datafusion = { workspace = true }
datafusion-cli = { workspace = true }
datafusion-proto = { workspace = true }

async-trait = "0.1.68"

configure_me = { version = "0.4.0" }
configure_me_codegen = { version = "0.4.4" }

log = "^0.4"

tokio = { version = "1.23", features = ["full"] }
lancedb = { git = "https://github.com/lancedb/lancedb", branch = "main", package = "vectordb" }
lance = "0.5.8"
futures = "0.3"
async-lock = "2.7.0"
static_assertions = "1.1.0"

[dev-dependencies]
tempfile = "3.5.0"
rand = { version = "0.8.3", features = ["small_rng"] }
env_logger = "0.10"
