[package]
name = "celestica-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
async-trait = "0.1.41"
aws-config = "0.55"
aws-credential-types = "0.55"
clap = { version = "3", features = ["derive", "cargo"] }
datafusion = { workspace = true }
dirs = "5.0.1"
env_logger = "0.10.0"
mimalloc = { version = "0.1", default-features = false }
object_store =  { workspace = true }
parking_lot = { version = "0.12" }
rustyline = "11.0"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
url = "2.2"
celestica-arrow = { path = "../celestica-arrow" }