[package]
name = "celestica-node"
version = "0.1.0"
edition = "2021"
description = "The core cluster membership system built ontop of Quickwit's chitchat."
license = "MIT"
keywords = ["vector", "databases", "distributed", "tokio", "async"]
categories = ["concurrency", "data-structures", "asynchronous","database"]
repository = "https://github.com/EtaCassiopeia/celestica"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
flume = "0.10.14"
async-trait = "0.1.59"
tracing = "0.1"
tokio-stream = "0.1.9"
parking_lot = "0.12.1"
rand = "0.8.5"
futures = "0.3"
crc32fast = "1.3.2"
bytecheck = "0.7.0"
smallvec = "1"
