[package]
name = "generated-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # In alphabetical order
pbjson = "0.5"
pbjson-types = "0.5"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
tonic = { workspace = true }

[dev-dependencies]
bytes = "1.4"

[build-dependencies] # In alphabetical order
tonic-build = { workspace = true }
prost-build = "0.11"
pbjson-build = "0.5"